# orbitarium-n-body-problem

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  requirements.txt
include/: nbody.hpp  simulation.hpp
src/: main.cpp  nbody.cpp  orbitarium-n-body-problem.hpp  simulation.cpp
